[package]
name = "muon"
version = "1.2.7"
edition = "2024"

[dependencies]
httplib = { path = "./httplib", default-features = false, features = ["asyncffi"] }
tokio = { version = "1.50.0", features = ["full"] }

clap = { version = "4.6.0", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
serde_json = "1.0.149"

regex = "1.12.3"
dashmap = { version = "6.1.0", features = ["serde"] }

rustls = { version = "=0.23.37", default-features = false, features = [] }
tokio-rustls = "=0.26.4"

async-trait = "0.1.89"
owo-colors = "4.3.0"
phf = { version = "0.13.1", features = ["macros"] }

[features]
default = ["unix-sockets", "simple", "samicpp", "aws-lc-rs"]

unix-sockets = ["httplib/unix-sockets"]
ring = ["httplib/ring", "rustls/ring"]
aws-lc-rs = ["httplib/aws-lc-rs", "rustls/aws-lc-rs"]

simple = []
samicpp = []
