[package]
name = "muon"
version = "1.5.2"
edition = "2024"

[dependencies]
photon = { path = "./httplib", default-features = false, features = ["asyncffi"] }
tokio = { version = "1.52.3", features = ["full"] }

clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
serde_json = "1.0.150"

regex = "1.12.4"
dashmap = { version = "6.2.1", features = ["serde"] }

rustls = { version = "=0.23.40", default-features = false, features = [] }
tokio-rustls = "=0.26.4"

async-trait = "0.1.89"
owo-colors = "4.3.0"
phf = { version = "0.13.1", features = ["macros"] }
psl = "2.1.212"
base64 = "=0.22.1"

libloading = "0.9.0"

[features]
default = ["unix-sockets", "handler-simple", "handler-samicpp", "aws-lc-rs"]

unix-sockets = ["photon/unix-sockets"]
ring = ["photon/ring", "rustls/ring"]
aws-lc-rs = ["photon/aws-lc-rs", "rustls/aws-lc-rs"]

handler-simple = []
handler-samicpp = []

